# luna-agent

./: .codexignore  .env.example  .gitignore  AGENTS.md  BACKEND_DEFERRED_FIXES.md  BACKEND_INTERFACE.md  BACKEND_PROGRESS.md  BACKEND_REQUIREMENTS.md  CLAUDE.md  CODEX_HANDOFF.md  FRONTEND_INTERFACE_REQUIREMENTS.md  FRONTEND_LEGACY_CLEANUP_PLAN.md  FRONTEND_PROGRESS.md  INTEGRATION_PLUGIN_TEST_CHECKLIST.md  MIGRATION_CHANGELOG.md  OUTBOUND_MULTIMODAL_TEST_CHECKLIST.md  PLATFORM_MEDIA_TEST_CHECKLIST.md  PLUGIN_ARCHITECTURE_DEBT.md  PLUGIN_HOT_RELOAD_TEST_CHECKLIST.md  PROJECT_EVOLUTION.md  PROVIDER_TRANSPORT_RETRY.md  README.md  SECURITY_TEST_CHECKLIST.md  TESTING_GUIDE.md  TODO.md  TUI_PLAN.md  config.yaml  config.yaml.example  lumora-roadmap.zh-CN.md  luna-agent-roadmap.zh-CN.md  pyproject.toml
docs/: README.md  architecture.md  capabilities-and-boundaries.md  configuration.md  core-tools.md  frontend_decisions.md  mcp-runtime-design.md  operations.md  platforms.md  plugin-development.md  plugins.md
scripts/: import_sjs_session.py  spike_inline.py  windows_plugin_appcontainer_smoke.py
tests/: conftest.py  test_activity.py  test_agent_factory.py  test_agent_loop.py  test_agent_runtime.py  test_approval_reviewer.py  test_artifact_store.py  test_attachment_store.py  test_bailian_embedding.py  test_cli.py  test_cli_chat.py  test_cli_entrypoints.py  test_cli_shell.py  test_codex_app_server.py  test_codex_bridge_plugin.py  test_codex_development_models.py  test_codex_development_runtime.py  test_command_policy.py  test_commands.py  test_compression.py  test_config_loader.py  (+104 more)
(+597 files in other folders)
