[project]
name = "personal-agent"
version = "0.1.0"
description = "Multi-platform AI Agent (MVP)"
requires-python = ">=3.12"
dependencies = [
    "pydantic-settings>=2.6",
    "lark-oapi>=1.4",
    "python-telegram-bot>=21.10",
    "httpx>=0.28",
    "aiosqlite>=0.20",
    "structlog>=24.4",
    "tiktoken>=0.8",
    "duckduckgo-search>=6.3",
    "html2text>=2024.2",
    "croniter>=3.0",
    "pyyaml>=6.0.3",
    "python-dotenv>=1.2.2",
    "fastembed>=0.8.0",
    "pip-system-certs>=5.3",
    "pymupdf>=1.27.2.3",
    "python-docx>=1.2.0",
    "aiohttp>=3.14.1",
    "pycryptodome>=3.23.0",
    "qrcode>=8.2",
    "ddgs>=9.14.4",
    "rich>=15.0",
    "typer>=0.12",
    "prompt-toolkit>=3.0.52",
]

[project.scripts]
personal-agent = "personal_agent.cli:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/personal_agent"]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
]
